--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -14,3 +14,41 @@
     padding-left: 0 !important;
     direction: ltr !important;
 }
+div.signatureDiv {
+    padding: 0 10px 0 10px;
+}
+#signatureCanvas {
+    width: 100%;
+    height: 200px;
+    margin: 10px 0 10px 0;
+    border: 1px solid black;
+    display: block;
+}
+
+/* Suggested by ionic developers to make modal full height on tablets*/
+
+@media (min-width: 680px) {
+  .modal {
+    top: 0px !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    width: 100% !important;
+  }
+  .platform-ios.platform-cordova .modal-wrapper .modal .bar-header:not(.bar-subheader) > * {
+    margin-top: 20px;
+  }
+  .platform-ios.platform-cordova .modal-wrapper .modal .bar-header:not(.bar-subheader) {
+    height: 64px;
+  }
+  .platform-ios.platform-cordova .modal-wrapper .modal .has-header,
+  .platform-ios.platform-cordova .modal-wrapper .modal .bar-subheader {
+    top: 64px;
+  }
+}
+iframe {
+  margin: 0 auto;
+  display:block;
+  border:none;
+  overflow:auto;
+}
